--- a/src/app/profile/user-dashboard/user-dashboard.component.html
+++ b/src/app/profile/user-dashboard/user-dashboard.component.html
@@ -8,7 +8,7 @@
     <span class="lni-map-marker"></span>
     </div>
     <div class="info">
-    <h6 class="number">12</h6>
+    <h6 class="number">{{posts.length}}</h6>
     <p class="type">Listing</p>
     </div>
     </div>
@@ -19,12 +19,12 @@
     <span class="lni-thumbs-up"></span>
     </div>
     <div class="info">
-    <h6 class="number">30</h6>
+    <h6 class="number">0</h6>
     <p class="type">Review</p>
     </div>
     </div>
     </div>
-    <div class="col-sm-4">
+    <!-- <div class="col-sm-4">
     <div class="item">
     <div class="icon">
     <span class="lni-comments"></span>
@@ -34,7 +34,7 @@
     <p class="type">Messages</p>
     </div>
     </div>
-    </div>
+    </div> -->
     </div>
     </div>
     </div>
