--- a/src/app/profile/user-password-change/user-password-change.component.html
+++ b/src/app/profile/user-password-change/user-password-change.component.html
@@ -1,25 +1,30 @@
 <div class="dashborad-box">
-    <h3 class="heading">Personal Information</h3>
     <div class="section-inforamation">
-    <form>
+    <form #form='ngForm' (ngSubmit)="update(form.value)">
     <div class="password-section">
     <h6>Update Password</h6>
     <div class="row">
+        <div class="col-sm-6">
+            <div class="form-group">
+            <label>Current Password</label>
+            <input ngModel name="old" type="password" class="form-control" placeholder="Write Current password">
+            </div>
+            </div>
     <div class="col-sm-6">
     <div class="form-group">
     <label>New Password</label>
-    <input type="password" class="form-control" placeholder="Write new password">
+    <input ngModel name="new" type="password" class="form-control" placeholder="Write new password">
     </div>
     </div>
     <div class="col-sm-6">
     <div class="form-group">
     <label>Repeat Password</label>
-    <input type="password" class="form-control" placeholder="Write same password again">
+    <input ngModel name="confirm" type="password" class="form-control" placeholder="Write password again">
     </div>
     </div>
     </div>
     </div>
-    <button class="btn btn-common">Submit</button>
+    <button type="submit" class="btn btn-common">Submit</button>
     </form>
     </div>
     </div>
