--- a/src/app/profile/user-dashboard-profile/user-dashboard-profile.component.html
+++ b/src/app/profile/user-dashboard-profile/user-dashboard-profile.component.html
@@ -1,63 +1,34 @@
 <div class="dashborad-box">
     <h3 class="heading">Personal Information</h3>
     <div class="section-inforamation">
-    <form>
+    <form #form = 'ngForm' (ngSubmit)="formSubmit(form.value)">
     <div class="row">
     <div class="col-sm-6">
     <div class="form-group">
     <label>First Name</label>
-    <input type="text" class="form-control" placeholder="Enter your First name">
-    </div>
-    </div>
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>Last Name</label>
-    <input type="text" class="form-control" placeholder="Enter your Last name">
+    <input ngModel name="name" type="text" [value]="User.name" class="form-control" placeholder="Enter your First name">
     </div>
     </div>
     <div class="col-sm-6">
     <div class="form-group">
     <label>Email Address</label>
-    <input type="text" class="form-control" placeholder="Ex: example@domain.com">
+    <input ngModel  name="email" [value]="User.email"  type="text" class="form-control" placeholder="Ex: example@domain.com">
     </div>
     </div>
     <div class="col-sm-6">
     <div class="form-group">
     <label>Phone Number</label>
-    <input type="text" class="form-control" placeholder="Ex: +1-0000-0000-00">
+    <input ngModel  name="phone" [value]="User.phone"  type="text" class="form-control" placeholder="Ex: +1-0000-0000-00">
     </div>
     </div>
     <div class="col-lg-12">
     <div class="form-group">
     <label>Address</label>
-    <textarea name="address" class="form-control" placeholder="Write your address here"></textarea>
-    </div>
-    </div>
-    <div class="col-lg-12">
-    <div class="form-group">
-    <label>About Yourself</label>
-    <textarea name="address" class="form-control" placeholder="Write about userself"></textarea>
+    <textarea ngModel name="address" [value]="User.address" class="form-control" placeholder="Write your address here"></textarea>
     </div>
     </div>
     </div>
-    <div class="password-section">
-    <h6>Update Password</h6>
-    <div class="row">
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>New Password</label>
-    <input type="password" class="form-control" placeholder="Write new password">
-    </div>
-    </div>
-    <div class="col-sm-6">
-    <div class="form-group">
-    <label>Repeat Password</label>
-    <input type="password" class="form-control" placeholder="Write same password again">
-    </div>
-    </div>
-    </div>
-    </div>
-    <button class="btn btn-common">Submit</button>
+    <button class="btn btn-common" type="submit">Submit</button>
     </form>
     </div>
     </div>
