--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,11 +23,11 @@
     <i class="lni-user"></i>Profile
     </a>
     </li>
-    <!-- <li>
-    <a href="my-properties.html">
-    <i class="lni-home"></i>My Properties
+    <li>
+    <a routerLink='/profile/posts'>
+    <i class="lni-home"></i>My Posts
     </a>
-    </li> -->
+    </li>
     <!-- <li>
     <a href="favorited-properties.html">
     <i class="lni-heart"></i>Favorited Properties
