--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -183,7 +183,7 @@
                 <ul class="nav nav-primary">
                     <li class="nav-item active">
                         <a data-toggle="collapse" routerLink="/admin" class="collapsed" aria-expanded="false">
-                            <i class="fas fa-home"></i>
+                            <i class="fa fa-home"></i>
                             <p>Dashboard</p>
                             <span class="caret"></span>
                         </a>
@@ -204,20 +204,20 @@
                     </li>
                     <li class="nav-section">
                         <span class="sidebar-mini-icon">
-                            <i class="fa fa-ellipsis-h"></i>
+                            <i class="fa fa-tasks"></i>
                         </span>
                         <h4 class="text-section">Components</h4>
                     </li>
                  
                     <li class="nav-item">
                         <a routerLink="/admin/subfields">
-                            <i class="fas fa-desktop"></i>
+                            <i class="fa fa-desktop"></i>
                             <p>Sub Category Fields</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a data-toggle="collapse" >
-                            <i class="fas fa-bars"></i>
+                            <i class="fa fa-desktop"></i>
                             <p>Menu Levels</p>
                         </a>
                     </li>
