--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -131,12 +131,7 @@
                                                       </p>
                                                      
                                                     </li>
-                                                    <li class="hoverTrigger"><a href="#">Search  <i class="fa fa-angle-down fa-indicator"></i><div class="mobileTriggerButton"></div></a>
-                                                      <ul class="drop-down-multilevel grid-col-12 effect-expand-top" style="transition: all 400ms ease 0s;">
-                                                        <li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/modern-2/search-results/">Search with Sidebar  </a></li>
-                                                        <li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/modern/search-results/?org=Aurora%2C+CO%2C+United+States&amp;rd=40">Radius Search  </a></li>
-                                                        <li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/modern-3/search-results/">Search with Topbar  </a></li>
-                                                      </ul>
+                                                    <li class="hoverTrigger"><a routerLink="/news">News <i class="fa fa-angle-down fa-indicator"></i><div class="mobileTriggerButton"></div></a>
                                                     </li>
                                                     <li class="hoverTrigger"><a href="#">Categories  <i class="fa fa-angle-down fa-indicator"></i><div class="mobileTriggerButton"></div></a>
                                                       <ul class="drop-down-multilevel grid-col-12 effect-expand-top" style="transition: all 400ms ease 0s;"><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/category-classic/">Category 1  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/modern-variation/">Category 2  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/minimal-veriation/">Category 3  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/fancy-veriation/">Category 4  </a></li><li class="hoverTrigger"><a href="http://adforest.scriptsbundle.com/flat-variation/">Category 5  </a></li>
