--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -288,7 +288,7 @@
                       </mat-expansion-panel-header>
                       <div class="row">
                         <div *ngFor="let f of Selected_Category.fields" class="col-lg-4 col-md-4 col-sm-6 ">
-                          <div *ngIf="f.type!='checkbox'" class="form-group">
+                          <div *ngIf="f.type!='checkbox' && f.type!='option'" class="form-group">
                             <input ngModel [name]="f.title" [type]="f.type" [placeholder]="f.title" class="form-control">
                           </div>
                           <div *ngIf="f.type=='checkbox'" class="form-check">
@@ -296,6 +296,13 @@
                               <input type="checkbox" ngModel [name]="f.title" class="form-check-input">{{f.title}}
                             </label>
                           </div>
+                          <div *ngIf="f.type=='option'"  class="form-group">
+                              <select class="form-control" ngModel [name]="f.title" id="exampleFormControlSelect1">
+                                <option value="0">{{f.title}}</option>
+                                <option *ngFor="let val of f.values"  [value]="val">{{val}}</option>
+                              </select>
+                          </div>
+                          
                         </div>
                       </div>
                       <div class="row" *ngIf="Selected_SubCategory">
@@ -326,10 +333,17 @@
                       Post</button>
                   </div>
                 </div>
+                
+              
               </div>
+
+            
              </div>
             </div>
-        
+            <div class="row">
+              <div #mapContainer style="width:100%;height:400px"></div>
+
+            </div>
         
     </form>
       </div>
