--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,7 +6,7 @@
     <div class="user-profile-box">
     
     <div class="header clearfix">
-    <h2 *ngIf="User">{{username}}</h2>
+    <h2 *ngIf="User">{{User.name}}</h2>
     <h4>Real Estate Agent</h4>
     <img src="assets/img/profile_cover.jpg" alt="avatar" class="img-fluid profile-img">
     </div>
