--- a/src/app/profile/user-posts/user-posts.component.html
+++ b/src/app/profile/user-posts/user-posts.component.html
@@ -17,7 +17,7 @@
         <div class="item-body">
         <h3 class="property-title"><a href="property.html">{{post.title}}</a></h3>
         <div class="adderess"><i class="lni-map-marker"></i> Drive Street, Los Angeles, US</div>
-        <div *ngFor="let fields of post" class="adderess"><i class="lni-map-marker"></i> Drive Street, Los Angeles, US</div>
+        <div *ngFor="let field of post.fields" class="adderess"><i [class]="field.icon"></i>{{field.value}}</div>
         <div class="pricin-list">
         <div class="property-price">
         <span>{{post.price}}</span>
