--- a/src/app/profile/user-dashboard/user-dashboard.component.html
+++ b/src/app/profile/user-dashboard/user-dashboard.component.html
@@ -59,7 +59,7 @@
     <td>{{post.date | date:'mediumDate'}}</td>
     <td class="rating"><span>4.3</span></td>
     <td class="status"><span class=" active">Active</span></td>
-    <td class="edit"><a (click)="posts.splice(posts.indexOf(psot),1)"><span class="lni-trash text-danger"></span></a></td>
+    <td class="edit"><a (click)="posts.splice(posts.indexOf(post),1)"><span class="lni-trash text-danger"></span></a></td>
     </tr>
    
     </tbody>
