--- a/backend/public/assets/css/main.css
+++ b/backend/public/assets/css/main.css
@@ -2304,7 +2304,7 @@ Property wrapper Style
   background-repeat: no-repeat;
   border: none;
   margin: 0;
-  background: rgba(0, 0, 0, 0.04) url(../img/avatar/user-bg.jpg) top left repeat;
+  background: rgba(0, 0, 0, 0.04) url(../img/profile_cover.jpg) top left repeat;
   background-size: cover;
   color: #ffffff;
 }
